--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "react-scripts": "^5.0.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.0.0",
-    "typescript": "^4.9.0"
+    "typescript": "^4.9.0",
+    "web-vitals": "^4.2.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.0.0",
